Several changes:
* updated to log4j2
* updated maven-compiler-plugin and config via properties
* updated jacoco/surefire configuration and report-generation
* added some javadoc
* fixed some generic return types
* tests still broken (RampartKerberosTest/axis2 samples)